--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -119,6 +119,7 @@ jobs:
               bash -exc 'apt-get update && apt-get -y install python3 python3-pip python3-venv curl git && \
               ln -fs /usr/share/zoneinfo/America/New_York /etc/localtime && export DEBIAN_FRONTEND=noninteractive && apt-get install -y tzdata && dpkg-reconfigure --frontend noninteractive tzdata && \
               python3 -m pip install --upgrade pip wheel setuptools && \
-              pip3 install numpy pandas scikit-learn statsmodels dask[dataframe] distributed scipy requests patsy psutil tqdm matrixprofile stumpy cloudpickle Sphinx docutils b2luigi sphinx_rtd_theme && \
+              pip3 install pandas scikit-learn dask[dataframe] distributed requests patsy psutil tqdm matrixprofile stumpy cloudpickle Sphinx docutils b2luigi sphinx_rtd_theme && \
               pip3 install -r test-requirements.txt && \
+              apt-get install python3-numpy python3-scipy python3-statsmodels && \
               pytest --junitxml=junit/test-results-3.8-highest.xml --cov-report=xml tests'
