--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -121,5 +121,5 @@ jobs:
               python3 -m pip install --upgrade pip wheel setuptools && \
               pip3 install pandas scikit-learn dask[dataframe] distributed requests patsy psutil tqdm matrixprofile stumpy cloudpickle Sphinx docutils b2luigi sphinx_rtd_theme && \
               pip3 install -r test-requirements.txt && \
-              apt-get install python3-numpy python3-scipy python3-statsmodels && \
+              apt-get -y install python3-numpy python3-scipy python3-statsmodels && \
               pytest --junitxml=junit/test-results-3.8-highest.xml --cov-report=xml tests'
