--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -118,8 +118,18 @@ jobs:
               arm64v8/ubuntu:20.04 \
               bash -exc 'apt-get update && apt-get -y install python3 python3-pip python3-venv curl git && \
               ln -fs /usr/share/zoneinfo/America/New_York /etc/localtime && export DEBIAN_FRONTEND=noninteractive && apt-get install -y tzdata && dpkg-reconfigure --frontend noninteractive tzdata && \
-              python3 -m pip install --upgrade pip wheel setuptools && \
-              pip3 install pandas scikit-learn dask[dataframe] distributed requests patsy psutil tqdm matrixprofile stumpy cloudpickle Sphinx docutils b2luigi sphinx_rtd_theme && \
-              pip3 install -r test-requirements.txt && \
+              wget -q "https://github.com/conda-forge/miniforge/releases/download/4.8.2-1/Miniforge3-4.8.2-1-Linux-aarch64.sh" -O miniconda.sh && \
+              chmod +x miniconda.sh && \
+              ./miniconda.sh -u -b -p $HOME/miniconda3 && \
+              export PATH=$HOME/miniconda3/bin:$PATH && \
+              conda config --set always_yes yes --set auto_update_conda false && \
+              conda install pip conda && \
+              conda update -n base conda && \
+              conda info -a && \
+              conda activate && \
+              conda install -q -y pip wheel setuptools && \              
               apt-get -y install python3-numpy python3-scipy python3-statsmodels && \
-              pytest --junitxml=junit/test-results-3.8-highest.xml --cov-report=xml tests'
+              conda install -q -y pandas scikit-learn dask[dataframe] distributed requests patsy psutil tqdm matrixprofile stumpy cloudpickle Sphinx docutils b2luigi sphinx_rtd_theme && \
+              pip3 install -r test-requirements.txt && \
+              pytest --junitxml=junit/test-results-3.8-highest.xml --cov-report=xml tests && \
+              conda deactivate'
